# justSignage

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clickable.json  common.sh  test.sh
snap/: snapcraft.yaml
src/: CMakeLists.txt
src/click/: CMakeLists.txt  justsignage.apparmor  justsignage.desktop  manifest.json.in
src/compositor/: CMakeLists.txt  Shell.qml  communitynotifier.cpp  communitynotifier.h  dbusinterface.cpp  dbusinterface.h  main.cpp  main.qml  qml.qrc  screenwindow.cpp  screenwindow.h
src/imageplayer/: CMakeLists.txt  main.qml
src/marqueeplayer/: CMakeLists.txt  main.qml
src/qtavplayer/: CMakeLists.txt  main.cpp  main.qml
src/remote/: CMakeLists.txt  compositorfinder.cpp  compositorfinder.h  compositorremote.cpp  compositorremote.h  main.cpp  main.qml
src/videoplayer/: CMakeLists.txt  main.cpp  main.qml  videoctrl.cpp  videoctrl.h
src/webplayer/: CMakeLists.txt  compositorctrl.cpp  compositorctrl.h  main.cpp  main.qml  remotectrl.cpp  remotectrl.h
